# ocr_gui

./: CMakeLists.txt  README.md  folder.cpp  folder.h  main.cpp  mainwindow.cpp  mainwindow.h  ocr_module.cpp  ocr_module.h
